fixed valign regression on switches

--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ md-switch + span {
     display: block;
     position: relative;
     left: 50px;
-    top: -27px;
+    top: -37px;
     width: 90%;
 }
 
